--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<DOCTYPE html>
+<html>
+  <head>
+    <title>GitHub Pages Test</title>
+  </head>
+  <body>
+    <h1>GitHub Pages Test</h1>
+    <p>I hope this works</p>
+  </body>
+</html>
