added break for mobile

--- a/gstcalc.html
+++ b/gstcalc.html
@@ -25,6 +25,8 @@
     <br>
     <div id="output">
         <input type="text" id="gst" readonly />
+        <br class="mobile-br">
+        <br class="mobile-br">
         <input type="text" id="total" readonly />
     </div>
 
