--- a/gstcalc.html
+++ b/gstcalc.html
@@ -21,6 +21,7 @@
     <div id="user-input">
         <input type="number" id="subtotal" placeholder="Subtotal" step=".10"/>
         <br class="mobile-br">
+        <br class="mobile-br">
         <button onclick="findgst()">Calculate GST</button><br>
     </div>
     <br>
