fixed typo, made compatible with old browsers

--- a/gstcalc.html
+++ b/gstcalc.html
@@ -11,7 +11,7 @@
 <body>
     <ul class="navbar">
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" ref="gstcalc.html">GST Calculator</a></li>
+        <li><a class="active" href="gstcalc.html">GST Calculator</a></li>
       </ul>
       <br>
       
