added winsows 10 eol countdown

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <ul class="navbar">
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="gstcalc.html">GST Calculator</a></li>
+        <li><a href="windus10eol.html">Windows 10 EOL Countdown</a></li>
     </ul>
     <br>
-      
-    
+
+
     <h1>Home Page</h1>
 
     <footer>
@@ -24,4 +25,3 @@
 </body>
 
 </html>
-
