--- a/gstcalc.html
+++ b/gstcalc.html
@@ -12,14 +12,15 @@
     <ul class="navbar">
         <li><a href="index.html">Home</a></li>
         <li><a class="active" href="gstcalc.html">GST Calculator</a></li>
-      </ul>
-      <br>
-      
-    
+        <li><a href="windus10eol.html">Windows 10 EOL Countdown</a></li>
+    </ul>
+    <br>
+
+
     <h1>GST Calculator</h1>
 
     <div id="user-input">
-        <input type="number" id="subtotal" placeholder="Subtotal" step=".10"/>
+        <input type="number" id="subtotal" placeholder="Subtotal" step=".10" />
         <br class="mobile-br">
         <br class="mobile-br">
         <button onclick="findgst()">Calculate GST</button><br>
@@ -40,4 +41,3 @@
 </body>
 
 </html>
-
