added page title

--- a/windus10eol.html
+++ b/windus10eol.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+
+    <title>Windows 10 EOL - briart2019</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="style.css" type="text/css" />
