Put input section in a form.

--- a/gstcalc.html
+++ b/gstcalc.html
@@ -20,10 +20,12 @@
     <h1>GST Calculator</h1>
 
     <div id="user-input">
-        <input type="number" id="subtotal" placeholder="Subtotal" step=".10" />
-        <br class="mobile-br">
-        <br class="mobile-br">
-        <button onclick="findgst()">Calculate GST</button><br>
+        <form>
+            <input type="number" id="subtotal" placeholder="Subtotal" step=".10" />
+            <br class="mobile-br">
+            <br class="mobile-br">
+            <button onclick="findgst()">Calculate GST</button><br>
+        </form>
     </div>
     <br>
     <div id="output">
