--- a/gstcalc.html
+++ b/gstcalc.html
@@ -20,7 +20,7 @@
     <h1>GST Calculator</h1>
 
     <div id="user-input">
-        <form>
+        <form onsubmit="return false;">
             <input type="number" id="subtotal" placeholder="Subtotal" step=".10" />
             <br class="mobile-br">
             <br class="mobile-br">
